$Id$                       -*-text-*-


Revision history for Net::DNS               
=============================
*** NOT RELEASED YET

Fix rt.cpan.org #37282
    Improved error reporting during client disconnect from the nameserver

NOTE rt.cpan.org # 40249

   Release 0.62 introduced a feature to parse data inside a packet only 
   when needed. This can the following to happen:

   Eception: corrupt or incomplete data at
                     /usr/lib/perl5/Net/DNS/RR.pm line 510.  
   caught at -e line 1

   This may happen when you have undefined your packet data before all the
   sections have been fully parsed. Such as in:

   $packet = Net::DNS::Packet->new(\$data);
   undef($data);

   The workaround is to force parcing by calling the methods that 
   parse the data. e.g.

   $packet = Net::DNS::Packet->new(\$data);
   $packet->answer; $packet->additional; $packet->authority;
   undef ($data) 


Fix rt.cpan.org # 41076 and # 41071

  Net::DNS::RR->new_from_hash function would not normalize the content
  of the data so that a method getting a string representation would
  get inconsistent results depending on whether a RR was created from
  a string of from a hash. 

Fix rt.cpan.org # 41296

  Compression buggy for large packets. Fix by Kim Minh.


Fix rt.cpan.org # 35752

  Perl 5.10.0 gave a number of issues on several platforms, prefering
  XSLoader over Dynaloader seemed to fix those.
 

Bug rt.cpan.org #34510
  Buggy setting of "Recursion too deep, aborted" corrected.
  
Feature (rt.cpan.org #39284)

  The ReplyHandler now also receives a variable with an annonymous has with the connection details. Variables
  supplied to the Reply handler are:  $qname, $qclass, $qtype, $peerhost, $query, $conn	
  The hash referenced by $conn contains the following buckets: sockhost, sockport,  peerhost, and peerport.
  


Feature t/08-online.t and t/10-recurse.t

  In particular environments a query for a.t. will resolve and or